update JDA add capy, panda and dog command improve info channels and faq commands make some env vars public