@@ -1,18 +1,14 @@
 package org.meteordev.meteorbot.command.commands;
 
-import org.meteordev.meteorbot.MeteorBot;
-import org.meteordev.meteorbot.Utils;
-import org.meteordev.meteorbot.command.Command;
-import org.meteordev.meteorbot.command.Commands;
 import net.dv8tion.jda.api.Permission;
 import net.dv8tion.jda.api.entities.Member;
-import net.dv8tion.jda.api.entities.MessageEmbed;
 import net.dv8tion.jda.api.events.interaction.command.SlashCommandInteractionEvent;
 import net.dv8tion.jda.api.interactions.commands.DefaultMemberPermissions;
 import net.dv8tion.jda.api.interactions.commands.OptionMapping;
 import net.dv8tion.jda.api.interactions.commands.OptionType;
 import net.dv8tion.jda.api.interactions.commands.build.SlashCommandData;
 import net.dv8tion.jda.api.requests.restaction.AuditableRestAction;
+import org.meteordev.meteorbot.command.Command;
 
 import java.time.Duration;
 import java.time.temporal.ChronoUnit;
@@ -30,14 +26,14 @@ public class MuteCommand extends Command {
     public SlashCommandData build(SlashCommandData data) {
         return data
             .addOption(OptionType.USER, "member", "The member to mute.", true)
-            .addOption(OptionType.STRING, "duration", "The duration of the mute.")
+            .addOption(OptionType.STRING, "duration", "The duration of the mute.", true)
             .addOption(OptionType.STRING, "reason", "The reason for the mute.")
             .setDefaultPermissions(DefaultMemberPermissions.enabledFor(Permission.MODERATE_MEMBERS));
     }
 
     @Override
     public void run(SlashCommandInteractionEvent event) {
-        Member member = Commands.parseMember(event);
+        Member member = parseMember(event);
         if (member == null) return;
 
         if (member.isTimedOut()) {
@@ -50,23 +46,13 @@ public class MuteCommand extends Command {
             return;
         }
 
-        long amount;
-        ChronoUnit unit;
+        String duration = event.getOption("duration").getAsString();
+        long amount = parseAmount(duration);
+        ChronoUnit unit = parseUnit(duration);
 
-        OptionMapping durationOption = event.getOption("duration");
-        if (durationOption == null) {
-            amount = 27;
-            unit = ChronoUnit.DAYS;
-        }
-        else {
-            String string = durationOption.getAsString();
-            amount = parseAmount(string);
-            unit = parseUnit(string);
-
-            if (amount == -1 || unit == null) {
-                event.reply("Failed to parse mute duration.").setEphemeral(true).queue();
-                return;
-            }
+        if (amount == -1 || unit == null) {
+            event.reply("Failed to parse mute duration.").setEphemeral(true).queue();
+            return;
         }
 
         if (unit == ChronoUnit.SECONDS && amount < 10) {
@@ -80,16 +66,9 @@ public class MuteCommand extends Command {
 
         AuditableRestAction<Void> action = member.timeoutFor(Duration.of(amount, unit));
         if (!reason.isBlank()) action.reason(reason);
-        action.complete();
-
-        String message = String.format("**Muted %s for %s**", member.getAsMention(), (amount + unitToString(unit)));
-        if (!reason.isBlank()) message += String.format("\nReason: *%s*", reason);
-        MessageEmbed embed = Utils.embed(message).build();
-
-        event.replyEmbeds(embed).queue();
-        if (!event.getChannel().getId().equals(MeteorBot.MOD_LOG.getId())) {
-            MeteorBot.MOD_LOG.sendMessageEmbeds(embed).queue();
-        }
+        action.queue(a -> {
+            event.reply("Timed out %s for %s.".formatted(member.getAsMention(), duration)).queue();
+        });
     }
 
     public static long parseAmount(String parse) {
